# ROVER

./: .gitignore  .gitmodules  Dockerfile  README.md  connect_network.sh  init_board.sh  init_rtk_base_receiver.sh  mosquitto.conf  nohup.out  rover_bringup.launch  start_docker.sh
DWA_obstacle_avoidance/: CMakeLists.txt  ReadMe.md  fuzzy.py  obstacle_avoidance.py  obstacle_avoidance_fuzzy.py  package.xml
DWA_obstacle_avoidance/scripts/: fuzzy.py  log_debug.py  obstacle_avoidance_fuzzy.py
DynamixelSDK/python/tests/protocol1_0/: movingMx28.py
DynamixelSDK/python/tests/protocol2_0/: movingMx106.py
FAST_LIO/: CMakeLists.txt
FAST_LIO/config/: mid360.yaml
FAST_LIO/launch/: mapping_mid360.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: laserMapping.cpp  preprocess.h
REST_API/scripts/: app.py  mqtt_handler.py  rest_api_map_loc_tester.py
camera_transmitter/: CMakeLists.txt  package.xml
camera_transmitter/launch/: camera_transmitter.launch  insta360.launch
camera_transmitter/scripts/: camera_transmitter_node.py  insta360_node.py
docker_internal_rest_api/: app.py  lewansoul_servo_bus.py  mqtt_handler.py  request_test.py
dwa_obstacle_avoidance/: CMakeLists.txt  ReadMe.md  package.xml
dwa_obstacle_avoidance/scripts/: collision_lib.py  frame_convertions.py  fuzzy.py  obstacle_avoidance.py  obstacle_avoidance_fuzzy.py
dynamixel_controller/: CMakeLists.txt  package.xml
dynamixel_controller/launch/: dynamixel_controller.launch
dynamixel_controller/scripts/: dynamixel_controller_node.py
gpios_control/: bms.py  gpios_control.py  gpios_pins.yaml  requirements.txt  temperature_data.csv
livox_ros_driver2/: CMakeLists.txt
livox_ros_driver2/launch/: msg_MID360.launch  rviz_MID360.launch
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/cfg/: obstAvoidParams.cfg
obstacle_avoidance/config/: config.sh
obstacle_avoidance/config/mavros/: apm_config.yaml  apm_pluginlists.yaml
obstacle_avoidance/launch/: obst_avoid1i.launch
obstacle_avoidance/rviz/: debug.rviz  perception_test.rviz
obstacle_avoidance/scripts/: collision_lib.py  frame_convertions.py  log_debug.py  obstacle_avoidance_node.py  obstacle_avoidance_pf_node.py  obstacle_avoidance_sc_node.py
pan_and_tilt/: motortest.py  mqttmotors.py  xarm.py
ptc_scan_processing/: CMakeLists.txt  package.xml
ptc_scan_processing/config/: params.yaml  rviz_config.rviz
ptc_scan_processing/include/: cloud_scan_converter.h  scan_preprocessor.h
ptc_scan_processing/launch/: lidar_filter_node.launch  preprocess_lidar.launch  ptc_laserscan_convertion.launch
ptc_scan_processing/src/: cloud_scan_converter.cpp  convert_ptc_laserscan_node.cpp  preprocess_lidar_scan_node.cpp  scan_preprocessor.cpp
server_functions/geomap_image/scripts/: accessing_georef_data_sample.py  global_map.py  main_sample.py  map_manager.py
server_functions/rtk_communication/: base_survey_in.py  base_survey_in_udp_mavlink.py  base_survey_mavlink_chunks.py  base_survey_mavlink_udp.py  base_survey_mavlink_udp_robots.py  pymavlink_approach.py  requirements.txt  rovers.yaml
slam_packages/localization/: CMakeLists.txt
slam_packages/localization/config/: params.yaml
slam_packages/localization/include/localization/: geo_lib.hpp  global_map_frames_manager.h  icp_point_to_point.h  localization_node.h  obstacle_point_cloud_generator_node.h  point_cloud_processing.hpp
slam_packages/localization/launch/: localization.launch
slam_packages/localization/resource/: visualizer.rviz
slam_packages/localization/src/: global_map_frames_manager.cpp  icp_point_to_point.cpp  localization_main.cpp  localization_node.cpp  obstacle_point_cloud_generator_main.cpp  obstacle_point_cloud_generator_node.cpp
slam_packages/mapping/include/mapping/: map_data_save_node.h
slam_packages/mapping/launch/: mapping.launch
slam_packages/mapping/src/: main.cpp  map_data_save_node.cpp
slam_packages/vehicle_params/: package.xml
temperature_sensors/: CMakeLists.txt  package.xml  requirements.txt  sensors.yaml  temperature_data.csv  temperature_sensors.py
temperature_sensors/config/: sensors.yaml
temperature_sensors/launch/: temperature_sensors.launch
temperature_sensors/scripts/: temperature_sensors.py
vehicle_params/: CMakeLists.txt  rover.params
vehicle_params/config/: apm_config.yaml  apm_pluginlists.yaml  params.yaml
