<?xml version="1.0"?>
<package format="2">

  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>The obstacle_avoidance package</description>

  <maintainer email="name@todo.todo"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>mavros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>mavros</exec_depend>

</package>
